# website_pcparts_handmade

./: CLOUDINARY_SETUP.md  DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  deploy.ps1  deploy.sh
.github/workflows/: deploy.yml
client/: .env  DEPLOYMENT.md  README.md  env.example  env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
client/scripts/: test-client.sh
client/src/: App.tsx  design-system.json  index.css  info.md  main.tsx
client/src/components/: AdminPanel.tsx  ApiStatus.tsx  AuthDebug.tsx  AuthModal.tsx  BackButton.tsx  BuildCard.tsx  BuildDetailsModal.tsx  BuildForm.tsx  Button.tsx  CartContext.tsx  CartDrawer.tsx  CategoryFilter.tsx  ErrorBoundary.tsx  Footer.tsx  FooterLogin.tsx  FormStyles.css  HandmadeForm.tsx  Header.tsx  HeroSection.tsx  I18nExample.tsx  ImageGalleryManager.tsx  InfoSection.tsx  LoadingState.tsx  LoginModal.tsx  Navigation.css  Navigation.tsx  Pagination.tsx  ProductCard.tsx  ProductDetail.tsx  ProductDetailsModal.tsx  ProductForm.tsx  SalesModal.tsx  (+5 more)
server/: .gitignore  .vercelignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  debug-admin.ps1  debug-frontend-issue.ps1  docker-compose.yml  env.example  test-admin.ps1  test-auth-fix.ps1  test-create-product-no-id.ps1  test-enhanced-models.ps1  test-product-create.ps1  test-product-creation.ps1  test-simple.ps1  vercel.json
server/.cargo/: config.toml
server/api/: auth.rs  index.rs  main.rs  models.rs  services.rs
server/scripts/: setup.sh  test-api.sh
server/src/: auth.rs  main.rs  models.rs  services.rs
(+32 files in other folders)
